Fix default dark mode

--- a/frontend/src/styles/nav.css
+++ b/frontend/src/styles/nav.css
@@ -322,10 +322,16 @@ The temperature display
     border: 1px solid var(--cadet_gray_500);
     top: 1px;
     left: 2px;
-    background: rgba(3, 33, 58, 0.1);
+    background: rgba(3, 33, 58, 0.2);
     z-index: 2;
     border-radius: 50%;
+    transition: left 0.2s ease-in-out,
+                background 0.2s ease-in-out;
+}
 
+.day_night_container.clicked::before {
+    left: 67px;
+    background: rgba(255, 255, 255, .4);
 }
 
   .time_container {
